@@ -8,20 +8,28 @@ import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * 💰 NexoEconomy - Autocompletado del Comando Eco (Arquitectura Enterprise)
+ */
 public class ComandoEcoTabCompleter implements TabCompleter {
 
-    private static final List<String> SUB_COMMANDS = Arrays.asList("give");
-    private static final List<String> CURRENCIES = Arrays.asList("COINS", "GEMS", "MANA");
-    private static final List<String> AMOUNTS = Arrays.asList("100", "500", "1000");
+    private static final List<String> CURRENCIES = List.of("COINS", "GEMS", "MANA");
+    private static final List<String> AMOUNTS = List.of("100", "500", "1000", "5000", "10000");
 
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
+
+        // 🛡️ SEGURIDAD VISUAL: Si no es administrador, no le sugerimos nada.
+        // El comando /eco base (ver balance) no requiere argumentos.
+        if (!sender.hasPermission("nexoeconomy.admin")) {
+            return new ArrayList<>();
+        }
+
         if (args.length == 1) {
-            return SUB_COMMANDS.stream()
+            return List.of("give").stream()
                     .filter(s -> s.startsWith(args[0].toLowerCase()))
                     .collect(Collectors.toList());
         }
@@ -40,7 +48,9 @@ public class ComandoEcoTabCompleter implements TabCompleter {
         }
 
         if (args.length == 4 && args[0].equalsIgnoreCase("give")) {
-            return AMOUNTS;
+            return AMOUNTS.stream()
+                    .filter(s -> s.startsWith(args[3]))
+                    .collect(Collectors.toList());
         }
 
         return new ArrayList<>();
